pull out assumptions testing into a new module